syntax = "proto3";

package hashicorp.consul.multicluster.v1alpha1;

import "pbmulticluster/v1alpha1/exported_services_consumer.proto";
import "pbresource/annotations.proto";

message NamespaceExportedServices {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_NAMESPACE};

  repeated ExportedServicesConsumer consumers = 1;
}
