// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.multicluster.v2;

message ExportedServicesConsumer {
  oneof consumer_tenancy {
    string peer = 1;
    string partition = 2;
    string sameness_group = 3;
  }
}
